--- a/index.html
+++ b/index.html
@@ -87,13 +87,13 @@ Bachelor of Engineering</p>
               
         <ul class="list-inline">
           <td class="list-inline-item">
-                 <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> certificate1 </a>
+                 <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" /> </a>
               <div class="content">
                     <h4>Certifications #1</h4>
                 </div>
            </td> 
           <td class="list-inline-item">
-                <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing">certificate2</a>
+                <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"><img src="Images\certificate2.png" /></a>
           <div class="content">
                     <h4>Certifications #2</h4>
                 </div>  
@@ -153,57 +153,4 @@ Bachelor of Engineering</p>
  
 </body>
 </html>
-     <!-- <div class="box">
-        <div class="image">-->
-         <!--<img src="Images/certificate3.jpeg" alt="" />-->
-        <!--  <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" /> </a>
-          <div class="content">
-            <h2>Certifications #3</h2>
-          </div>
-        </div>
-      </div>
-  
-      <div class="box">
-        <div class="image">
-          <!--<img src="Images/certificate5.jpeg" alt="" />-->
-       <!--   <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" /> </a>
-          <div class="content">
-            <h2>Certifications #4</h2>
-          </div>
-        </div>
-      </div>
-  
-      <div class="box">
-        <div class="image">
-          <!--<img src="Images/certificate6.jpeg" alt="" />-->
-       <!--   <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" /> </a>
-          <div class="content">
-            <h2>Certifications #5</h2>
-          </div>
-        </div>
-      </div>
-      <div class="box">
-        <div class="image">
-          <img src="Images\certificate7.png" alt="" />
-          <!--<a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate7.png" /> </a>-->
-      <!--    <div class="content">
-            <h2>Certifications #6</h2>
-          </div>
-        </div>
-      </div>
-
-      <div class="box">
-        <div class="image">
-          <img src="Images\certificate8.png" alt="" />
-          <!--<a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" /> </a>-->
-      <!--    <div class="content">
-            <h2>Certifications #7</h2>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section> -->
-    <!-- Add more sections for experience, skills, projects, etc. -->
     
-    <!-- Add any JavaScript functionality here -->
-
