--- a/index.html
+++ b/index.html
@@ -148,6 +148,16 @@ Bachelor of Engineering</p>
             </td>
         </ul>
                  </tr>
+             <tr> <figure class="figure">
+                <td> 
+  <img src="Images\certificate8.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+  <figcaption class="figure-caption">Certifications #7</figcaption>
+</td>
+                  <td> 
+  <img src="Images\certificate4.png" class="figure-img img-fluid rounded" alt="A generic square placeholder image with rounded corners in a figure.">
+  <figcaption class="figure-caption">Certifications #8</figcaption>
+</td></figure>
+             </tr>
              </table>
     </section>
  
