--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@ Bachelor of Engineering</p>
                 </div>
            </td> 
           <td class="list-inline-item">
-                <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"><img src="Images\certificate2.png" /></a>
+                <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.png" /> </a>
           <div class="content">
                     <h4>Certifications #2</h4>
                 </div>  
@@ -136,15 +136,17 @@ Bachelor of Engineering</p>
                  <ul class="list-inline">
            <td class="list-inline-item">
               <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" /></a>
-               <div class="content">
+              <figcaption class="figure-caption">Certifications #7</figcaption>
+               <!-- <div class="content">
             <h4>Certifications #7</h4>
-          </div>
+          </div>-->
            </td>
             <td class="list-inline-item">
               <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" /></a>
-               <div class="content">
+              <imgcaption class="figure-caption">Certifications #8</imgcaption>
+                <!-- <div class="content">
             <h4>Certifications #8</h4>
-          </div>
+          </div>-->
             </td>
         </ul>
                  </tr>
