--- a/index.html
+++ b/index.html
@@ -13,6 +13,13 @@
     <div class="container-fluid">
   <!-- Content here -->
          <header>
+
+<span class="badge badge-primary">Primary</span>
+<span class="badge badge-secondary">Secondary</span>
+<span class="badge badge-success">Success</span>
+<span class="badge badge-danger">Danger</span>
+<span class="badge badge-warning">Warning</span>
+             
             <div class="jumbotron jumbotron-fluid">
                 <div class="container">
                     <h1 class="display-4">Lalima Kumari</h1>
