--- a/index.html
+++ b/index.html
@@ -20,11 +20,9 @@
 <span class="badge badge-danger">Danger</span>
 <span class="badge badge-warning">Warning</span>
              
-            <div class="jumbotron jumbotron-fluid">
-                <div class="container">
+            <div class="jumbotron">
                     <h1 class="display-4">Lalima Kumari</h1>
                     <p class="lead">Fresher</p>
-              </div>
             </div>
         </header>
     </div>
@@ -131,16 +129,16 @@
                  </ul>
              </tr>
              <tr>
-                 <ul class="list-inline">
-                   <td class="list-inline-item">
-                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" /></a>
+                 <!--<ul class="list-inline">-->
+                   <td>
+                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" class="rounded float-left" /></a>
                       <imgcaption class="figure-caption">Certifications #7</imgcaption>
                    </td>
-                    <td class="list-inline-item">
+                    <td>
                       <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" /></a>
                       <imgcaption class="figure-caption">Certifications #8</imgcaption>
                     </td>
-                </ul>
+                <!--</ul>-->
             </tr> 
         </table>
     </section>
