--- a/index.html
+++ b/index.html
@@ -5,7 +5,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>Resume</title>
-    <meta name="description" content="My professional resume">
+   <!-- <meta name="description" content="My professional resume">-->
+
+   
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--make ur application responsive not distubuted-->
+   
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+    <link rel="icon" href="path/to/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="css/style.css">
     <!-- Add any additional metadata or stylesheets here -->
 </head>
     
@@ -14,11 +21,11 @@
   <!-- Content here -->
          <header>
 
-<span class="badge badge-primary">Primary</span>
+<!--<span class="badge badge-primary">Primary</span>
 <span class="badge badge-secondary">Secondary</span>
 <span class="badge badge-success">Success</span>
 <span class="badge badge-danger">Danger</span>
-<span class="badge badge-warning">Warning</span>
+<span class="badge badge-warning">Warning</span>-->
              
             <div class="jumbotron">
                     <h1 class="display-4">Lalima Kumari</h1>
