--- a/index.html
+++ b/index.html
@@ -125,12 +125,12 @@
              </tr>
              <tr>
                  <ul class="list-inline">
-                    <td class="list-inline-item">
+                    <td>
                       <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" /></a>
-                         <imgcaption class="figure-caption">Certifications #5</imgcaption>
+                        <imgcaption class="figure-caption">Certifications #5</imgcaption>
                    </td>
-                    <td class="list-inline-item">
-                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"><img src="Images\certificate7.png" /> </a>
+                    <td>
+                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate7.png" /> </a>
                       <imgcaption class="figure-caption">Certifications #6</imgcaption>
                     </td>
                  </ul>
@@ -139,11 +139,11 @@
                  <!--<ul class="list-inline">-->
                    <td>
                       <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" class="rounded float-left" /></a>
-                      <imgcaption class="figure-caption">Certifications #7</imgcaption>
+                      <imgcaption class="figure-caption-left">Certifications #7</imgcaption>
                    </td>
                     <td>
                       <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" /></a>
-                      <imgcaption class="figure-caption">Certifications #8</imgcaption>
+                      <imgcaption class="figure-caption-left">Certifications #8</imgcaption>
                     </td>
                 <!--</ul>-->
             </tr> 
