--- a/index.html
+++ b/index.html
@@ -18,15 +18,32 @@
     
 <body>
     <div class="container-fluid">
+        <nav class="navbar navbar-expand-lg navbar-light bg-light">
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+ <!-- <a class="navbar-brand" href="#">Navbar</a>-->
+
+  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+    <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+      <li class="nav-item active">
+        <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+      </li>
+      <!--<li class="nav-item">
+        <a class="nav-link" href="#">Link</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link disabled" href="#">Disabled</a>
+      </li>-->
+    </ul>
+    <form class="form-inline my-2 my-lg-0">
+      <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+    </form>
+  </div>
+</nav>
   <!-- Content here -->
          <header>
-
-<!--<span class="badge badge-primary">Primary</span>
-<span class="badge badge-secondary">Secondary</span>
-<span class="badge badge-success">Success</span>
-<span class="badge badge-danger">Danger</span>
-<span class="badge badge-warning">Warning</span>-->
-             
             <div class="jumbotron">
                     <h1 class="display-4">Lalima Kumari</h1>
                     <p class="lead">Fresher</p>
@@ -127,11 +144,11 @@
                  <ul class="list-inline">
                     <td>
                       <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" /></a>
-                        <imgcaption class="figure-caption">Certifications #5</imgcaption>
+                       <p><imgcaption class="figure-caption">Certifications #5</imgcaption></p> 
                    </td>
                     <td>
                       <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate7.png" /> </a>
-                      <imgcaption class="figure-caption">Certifications #6</imgcaption>
+                      <p><imgcaption class="figure-caption">Certifications #6</imgcaption></p>
                     </td>
                  </ul>
              </tr>
@@ -139,7 +156,7 @@
                  <!--<ul class="list-inline">-->
                    <td>
                       <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" class="rounded float-left" /></a>
-                      <imgcaption class="figure-caption-left">Certifications #7</imgcaption>
+                      <p>X<imgcaption class="figure-caption-left">Certifications #7</imgcaption></p>
                    </td>
                     <td>
                       <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" /></a>
