--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                       <imgcaption class="figure-caption">Certifications #1</imgcaption>
                    </td> 
                   <td class="list-inline-item">
-                    <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpng" /> </a>
+                    <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpg" /> </a>
                       <imgcaption class="figure-caption">Certifications #2</imgcaption> 
                   </td>
                 </ul>
