--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
    
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="path/to/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
+    
     <!-- Add any additional metadata or stylesheets here -->
 </head>
     
 <body>
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+ <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
- <!-- <a class="navbar-brand" href="#">Navbar</a>-->
+  <a class="navbar-brand" href="#">Navbar</a>-->
 
   <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
@@ -74,7 +74,7 @@
         <table>
             <ul class="list-unstyled">
              <tr class="media">
-               <td> <img class="mr-3" src="https://avatars1.githubusercontent.com/u/66869709?s=200&v=4" alt="Generic placeholder image"></td>
+               <td> <img class="mr-3" src="https://avatars1.githubusercontent.com/u/66869709?s=200&v=4" width="30" height="30" alt="Generic placeholder image"></td>
                <td> 
                    <div class="media-body">
                       <h5 class="mt-0 mb-1">Artificial Intelligence & Machine Learning Trainee</h5>
@@ -84,7 +84,7 @@
                </td>
               </tr>
               <tr class="media my-4">
-               <td> <img class="mr-3" src="https://media.licdn.com/dms/image/C4D0BAQFRSUGt3tEO0w/company-logo_200_200/0/1672649984389?e=2147483647&v=beta&t=ZN33Sp5-3zYNYNOJp_KzrABv9PcNltzjSL3MUSbY6iM" alt="Generic placeholder image"></td>
+               <td> <img class="mr-3" src="https://media.licdn.com/dms/image/C4D0BAQFRSUGt3tEO0w/company-logo_200_200/0/1672649984389?e=2147483647&v=beta&t=ZN33Sp5-3zYNYNOJp_KzrABv9PcNltzjSL3MUSbY6iM" width="30" height="30" alt="Generic placeholder image"></td>
                <td> 
                    <div class="media-body">
                       <h5 class="mt-0 mb-1">Data Science & Machine Learning Trainee</h5>
@@ -94,7 +94,7 @@
                    </td>
               </tr>
              <tr class="media">
-               <td><img class="mr-3" src="https://th.bing.com/th/id/OIP.dMEjpJ4z8mcGjij-jS1xTgHaHk?rs=1&pid=ImgDetMain" alt="Generic placeholder image"></td> 
+               <td><img class="mr-3" src="https://th.bing.com/th/id/OIP.dMEjpJ4z8mcGjij-jS1xTgHaHk?rs=1&pid=ImgDetMain" width="30" height="30" alt="Generic placeholder image"></td> 
                 <td> 
                     <div class="media-body">
                       <h5 class="mt-0 mb-1">Internet of Thing & Machine Learning Trainee</h5>
@@ -119,23 +119,23 @@
             <tr>  
                 <ul class="list-inline">
                   <td class="list-inline-item">
-                     <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" /> </a>
+                     <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" width="100" height="100" /> </a>
                       <imgcaption class="figure-caption">Certifications #1</imgcaption>
                    </td> 
                   <td class="list-inline-item">
-                    <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpg" /> </a>
-                      <imgcaption class="figure-caption">Certifications #2</imgcaption> 
+                    <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpg" width="100" height="100" /> </a>
+                     <p><imgcaption class="figure-caption">Certifications #2</imgcaption> </p>
                   </td>
                 </ul>
             </tr>
             <tr>
                 <ul class="list-inline">
                     <td class="list-inline-item">
-                       <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" /></a>
+                       <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" width="100" height="100"/></a>
                          <imgcaption class="figure-caption">Certifications #3</imgcaption>
                     </td>
                     <td class="list-inline-item">
-                      <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" /></a>
+                      <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" width="100" height="100"/></a>
                       <imgcaption class="figure-caption">Certifications #4</imgcaption>
                     </td>
                  </ul>
@@ -143,11 +143,11 @@
              <tr>
                  <ul class="list-inline">
                     <td>
-                      <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" /></a>
+                      <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" width="100" height="100"/></a>
                        <p><imgcaption class="figure-caption">Certifications #5</imgcaption></p> 
                    </td>
                     <td>
-                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate7.png" /> </a>
+                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate7.png" width="100" height="100"/> </a>
                       <p><imgcaption class="figure-caption">Certifications #6</imgcaption></p>
                     </td>
                  </ul>
@@ -155,11 +155,11 @@
              <tr>
                  <!--<ul class="list-inline">-->
                    <td>
-                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" class="rounded float-left" /></a>
-                      <p>X<imgcaption class="figure-caption-left">Certifications #7</imgcaption></p>
+                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" class="rounded float-left" width="100" height="100"/></a>
+                      <p><imgcaption class="figure-caption-left">Certifications #7</imgcaption></p>
                    </td>
                     <td>
-                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" /></a>
+                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" width="100" height="100"/></a>
                       <imgcaption class="figure-caption-left">Certifications #8</imgcaption>
                     </td>
                 <!--</ul>-->
