--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
     <section id="experience">
         <h2>Work Experience</h2>
         <table>
-            <ul class="list-unstyled">
-             <tr class="media">
+            <ul <ul class="list-inline">>
+             <tr class="list-inline-item">
                <td> <img class="mr-3" src="https://avatars1.githubusercontent.com/u/66869709?s=200&v=4" width="30" height="30" alt="Generic placeholder image"></td>
                <td> 
                    <div class="media-body">
@@ -117,31 +117,26 @@
         <table>
            <tr> <th><h2>Certifications</h2></th></tr>
             <tr>  
-                <ul class="list-inline">
-                  <td class="list-inline-item">
+                  <td>
                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" width="100" height="100" /> </a>
-                      <imgcaption class="figure-caption">Certifications #1</imgcaption>
+                      <p><imgcaption class="figure-caption">Certifications #1</imgcaption></p>
                    </td> 
-                  <td class="list-inline-item">
+                  <td>
                     <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpg" width="100" height="100" /> </a>
                      <p><imgcaption class="figure-caption">Certifications #2</imgcaption> </p>
                   </td>
-                </ul>
             </tr>
             <tr>
-                <ul class="list-inline">
-                    <td class="list-inline-item">
+                    <td>
                        <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" width="100" height="100"/></a>
-                         <imgcaption class="figure-caption">Certifications #3</imgcaption>
+                         <p><imgcaption class="figure-caption">Certifications #3</imgcaption></p>
                     </td>
-                    <td class="list-inline-item">
+                    <td>
                       <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" width="100" height="100"/></a>
-                      <imgcaption class="figure-caption">Certifications #4</imgcaption>
+                      <p><imgcaption class="figure-caption">Certifications #4</imgcaption></p>
                     </td>
-                 </ul>
              </tr>
              <tr>
-                 <ul class="list-inline">
                     <td>
                       <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" width="100" height="100"/></a>
                        <p><imgcaption class="figure-caption">Certifications #5</imgcaption></p> 
@@ -150,10 +145,8 @@
                       <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate7.png" width="100" height="100"/> </a>
                       <p><imgcaption class="figure-caption">Certifications #6</imgcaption></p>
                     </td>
-                 </ul>
              </tr>
              <tr>
-                 <!--<ul class="list-inline">-->
                    <td>
                       <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" class="rounded float-left" width="100" height="100"/></a>
                       <p><imgcaption class="figure-caption-left">Certifications #7</imgcaption></p>
@@ -162,7 +155,6 @@
                       <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" width="100" height="100"/></a>
                       <imgcaption class="figure-caption-left">Certifications #8</imgcaption>
                     </td>
-                <!--</ul>-->
             </tr> 
         </table>
     </section>
