--- a/index.html
+++ b/index.html
@@ -72,7 +72,18 @@
     <section id="experience">
         <h2>Work Experience</h2>
         <table>
-            <ul <ul class="list-inline">>
+
+<!-- Image and text -->
+<nav class="navbar navbar-light bg-light">
+  <a class="navbar-brand" href="https://www.linkedin.com/posts/upskillcampus_upskillcampus-uniconvergetechnologies-activity-7059844877206863872-HvWK/">
+    <img src="https://avatars1.githubusercontent.com/u/66869709?s=200&v=4" width="30" height="30" class="d-inline-block align-top" alt="">
+    <h5 class="mt-0 mb-1">Artificial Intelligence & Machine Learning Trainee</h5>
+    <p>Duration: Aug,2023 - Sep,2023 </p>
+    Developed and implemented AI algorithms to analyze problem statement with the aim of improving project accuracy.
+  </a>
+</nav>
+            
+            <ul class="list-inline">
              <tr class="list-inline-item">
                <td> <img class="mr-3" src="https://avatars1.githubusercontent.com/u/66869709?s=200&v=4" width="30" height="30" alt="Generic placeholder image"></td>
                <td> 
