--- a/index.html
+++ b/index.html
@@ -19,24 +19,24 @@
 <body>
     <div class="container-fluid">
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
- <!-- <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
+<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo03" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
     <span class="navbar-toggler-icon"></span>
   </button>
-  <a class="navbar-brand" href="#">Navbar</a>-->
+  <a class="navbar-brand" href="#">HOME</a>
 
-  <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
+ <!-- <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
       <li class="nav-item active">
         <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
       </li>
-      <!--<li class="nav-item">
+      <li class="nav-item">
         <a class="nav-link" href="#">Link</a>
       </li>
       <li class="nav-item">
         <a class="nav-link disabled" href="#">Disabled</a>
-      </li>-->
-    </ul>
-    <form class="form-inline my-2 my-lg-0">
+      </li>
+    </ul>-->
+   <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
       <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
     </form>
@@ -59,7 +59,7 @@
                     <td>Github: <a href="https://github.com/Lalima-tmr">https://github.com/Lalima-tmr</a></td>
                 </tr>
                 <tr>
-                    <td>phone:<a href="tel:6205733996">6205733996</a></td>
+                    <td>phone: <a href="tel:6205733996">6205733996</a></td>
                     <td>E-mail: <a href="mailto:lalimak05@gmail.com?cc=lalimak05@gmail.com&bcc=lalimak05@gmail.com&subject=Mail from our Website&body=Some body text here">lalimak05@gmail.com</a></td>
                 </tr>
                <tr>
@@ -77,10 +77,12 @@
 <nav class="navbar navbar-light bg-light">
   <a class="navbar-brand" href="https://www.linkedin.com/posts/upskillcampus_upskillcampus-uniconvergetechnologies-activity-7059844877206863872-HvWK/">
     <img src="https://avatars1.githubusercontent.com/u/66869709?s=200&v=4" width="30" height="30" class="d-inline-block align-top" alt="">
-    <h5 class="mt-0 mb-1">Artificial Intelligence & Machine Learning Trainee</h5>
+  </a>
+    <div class="media-body">
+      <h5 class="mt-0 mb-1">Artificial Intelligence & Machine Learning Trainee</h5>
     <p>Duration: Aug,2023 - Sep,2023 </p>
     Developed and implemented AI algorithms to analyze problem statement with the aim of improving project accuracy.
-  </a>
+    </div>
 </nav>
             
             <ul class="list-inline">
@@ -164,7 +166,7 @@
                    </td>
                     <td>
                       <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" width="100" height="100"/></a>
-                      <imgcaption class="figure-caption-left">Certifications #8</imgcaption>
+                      <p><imgcaption class="figure-caption-left">Certifications #8</imgcaption></p>
                     </td>
             </tr> 
         </table>
