--- a/index.html
+++ b/index.html
@@ -194,13 +194,13 @@
   <div class="socials">
     <a href="#" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-google"></ion-icon></a>
     <a href="#" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-twitter"></ion-icon></a>
-    <a href="#" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-youtube"></ion-icon></a>
     <a href="https://www.linkedin.com/in/lalima-singh015" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-linkedin"></ion-icon></a>
-    <a href="#" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-instagram"></ion-icon></a>
     <a href="https://github.com/Lalima-tmr" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-github"></ion-icon></a>
 </div>
   </section>
- 
+
+            <script defer src="script/script.js"></script>
+            
 </body>
 </html>
     
