--- a/index.html
+++ b/index.html
@@ -56,11 +56,12 @@
           </div>
         </div>
         </div>
+        <a href="https://drive.google.com/file/d/1Ioc8GUdpPRgxcbzoLkKJAwnx_7c0NpdU/view?usp=sharing" target="_blank" class="btn">Download Resume</a>
     </section>
 
-            <section class="resume" id="resume" >
+           <!-- <section class="resume" id="resume" >
                 <a href="https://drive.google.com/file/d/1Ioc8GUdpPRgxcbzoLkKJAwnx_7c0NpdU/view?usp=sharing" target="_blank" class="btn">Download Resume</a
-            </section>
+            </section>-->
 
     <footer>
         <section id="contact" bg-colour: bg-dark>
@@ -138,7 +139,7 @@
          </table>
     </section> 
     
-  <section class="education" id="education">
+  <section class="resume" id="resume">
         <h2>Education</h2>
         <h4>Information Science & Engineering | Visvesvaraya Technological University, Bangalore | Bachelor of Engineering</h4>
         <p>Duration: Nov,2020 – Present</p>
@@ -189,6 +190,34 @@
             </tr> 
         </table>
     </section>
+
+<section class="project" id="project">
+    <h1 class="heading">my <span>project</span></h1>
+    <div class="col-container">
+        <div class="col">
+            <h2>Project details</h2>
+            <div class="box">
+                <span><i class="material-icons"> calendar_today </i> Aug 2023 - Sept 2023 </span>
+                <h3>Prediction of Agriculture Crop Production In India</h3>
+                <p>
+                  The project "Prediction of Agriculture Crop Production in India" aims to leverage data science and machine learning to provide accurate predictions for crop production, ultimately contributing to better agricultural decision-making, resource allocation, and food security in India.
+                </p>
+                <p class="university">upSkill Campus</p>
+            </div>
+          
+        </div>
+
+        <div class="col">
+            <h2>technologies used</h2>
+            <div class="box">
+                <ul>
+                  <p>Data Science</p>
+                  <p>Machine-Learning</p>
+                </ul>
+            </div>
+        </div>
+    </div>
+</section>
 
 <section class="footer" id="footer">
   <div class="socials">
