--- a/index.html
+++ b/index.html
@@ -223,12 +223,14 @@
   <div class="socials">
     <a href="#" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-google"></ion-icon></a>
     <a href="#" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-twitter"></ion-icon></a>
-    <a href="https://www.linkedin.com/in/lalima-singh015" target="_blank" rel="noopener noreferrer"><ion-icon name="https://www.linkedin.com/company/icons8-llc/"></ion-icon></a>
+    <a href="https://www.linkedin.com/in/lalima-singh015" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-linkedin"></ion-icon></a>
     <a href="https://github.com/Lalima-tmr" target="_blank" rel="noopener noreferrer"><ion-icon name="logo-github"></ion-icon></a>
 </div>
   </section>
 
             <script defer src="script/script.js"></script>
+            <script defer type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+              <script defer nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
             
 </body>
 </html>
