--- a/index.html
+++ b/index.html
@@ -14,9 +14,6 @@
 </head>
     
 <body>
-    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
-  <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
-</svg>
     <div class="container-fluid">
   <!-- Content here -->
 
@@ -59,7 +56,6 @@
           </div>
         </div>
         </div>
-        <a href="https://drive.google.com/file/d/1Ioc8GUdpPRgxcbzoLkKJAwnx_7c0NpdU/view?usp=sharing" target="_blank" class="btn">Download Resume</a>
     </section>
 
            <!-- <section class="resume" id="resume" >
@@ -70,16 +66,25 @@
         <section id="contact" bg-colour: bg-dark>
             <table>
                 <tr>
+      <th scope="col"></th>
+      <th scope="col"></th>
+    </tr>
+                <tbody>
+                <tr>
+                    <th scope="row"></th>
                     <td>Address: Bangalore, Karnataka</td>
                     <td>Github: <a href="https://github.com/Lalima-tmr">https://github.com/Lalima-tmr</a></td>
                 </tr>
                 <tr>
+                    <th scope="row"></th>
                     <td>phone: <a href="tel:6205733996">6205733996</a></td>
                     <td>E-mail: <a href="mailto:lalimak05@gmail.com?cc=lalimak05@gmail.com&bcc=lalimak05@gmail.com&subject=Mail from our Website&body=Some body text here">lalimak05@gmail.com</a></td>
                 </tr>
                <tr>
+                   <th scope="row"></th>
                    <td>LinkedIn: <a href="https://www.linkedin.com/in/lalima-singh015/">https://www.linkedin.com/in/lalima-singh015/</a></td>
                </tr>
+                    </tbody>
             </table>
         </section>
     </footer>
@@ -146,46 +151,50 @@
         <h2>Education</h2>
         <h4>Information Science & Engineering | Visvesvaraya Technological University, Bangalore | Bachelor of Engineering</h4>
         <p>Duration: Nov,2020 – Present</p>
+      <a href="https://drive.google.com/file/d/1Ioc8GUdpPRgxcbzoLkKJAwnx_7c0NpdU/view?usp=sharing" target="_blank" class="btn">Download Resume</a>
     </section>
 
     <section id="certificate">
+        <h2>Certifications</h2>
         <table>
-           <tr> <th><h2>Certifications</h2></th></tr>
+             <tr>
+                  <th scope="col"></th>
+                  <th scope="col"></th>
+             </tr>
+           
             <tr>  
+                <th scope="row"></th>
                   <td>
                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" width="200" height="200" /> </a>
                       <p><imgcaption class="figure-caption">Certifications #1</imgcaption></p>
                    </td> 
-                  <td>
-                    <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpg" width="200" height="200" /> </a>
-                     <p><imgcaption class="figure-caption">Certifications #2</imgcaption> </p>
-                  </td>
-            </tr>
-            <tr>
-                    <td>
+                <td>
                        <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" width="200" height="200"/></a>
                          <p><imgcaption class="figure-caption">Certifications #3</imgcaption></p>
                     </td>
-                    <td>
-                      <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" width="200" height="200"/></a>
-                      <p><imgcaption class="figure-caption">Certifications #4</imgcaption></p>
-                    </td>
-             </tr>
-             <tr>
-                    <td>
+                  <td>
                       <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" width="200" height="200"/></a>
                        <p><imgcaption class="figure-caption">Certifications #5</imgcaption></p> 
                    </td>
+                 <td>
+                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" class="rounded float-left" width="200" height="200"/></a>
+                      <p><imgcaption class="figure-caption-left">Certifications #7</imgcaption></p>
+                   </td>
+            </tr>
+            <tr>
+                <th scope="row"></th>
+                 <td>
+                    <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpg" width="200" height="200" /> </a>
+                     <p><imgcaption class="figure-caption">Certifications #2</imgcaption> </p>
+                  </td> 
+                 <td>
+                      <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" width="200" height="200"/></a>
+                      <p><imgcaption class="figure-caption">Certifications #4</imgcaption></p>
+                    </td>
                     <td>
                       <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate7.png" width="200" height="200"/> </a>
                       <p><imgcaption class="figure-caption">Certifications #6</imgcaption></p>
                     </td>
-             </tr>
-             <tr>
-                   <td>
-                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" class="rounded float-left" width="200" height="200"/></a>
-                      <p><imgcaption class="figure-caption-left">Certifications #7</imgcaption></p>
-                   </td>
                     <td>
                       <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" width="200" height="200"/></a>
                       <p><imgcaption class="figure-caption-left">Certifications #8</imgcaption></p>
