--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!--make ur application responsive not distubuted-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="icon" href="path/to/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="style.css">
     <!-- Add any additional metadata or stylesheets here -->
 </head>
     
-<body>
+<body style="background-color: pink;">
     <div class="container-fluid">
   <!-- Content here -->
 
@@ -209,7 +209,8 @@
                 <span><i class="material-icons"> calendar_today </i> Aug 2023 - Sept 2023 </span>
                 <h3>Prediction of Agriculture Crop Production In India</h3>
                 <p>
-                  The project "Prediction of Agriculture Crop Production in India" aims to leverage data science and machine learning to provide accurate predictions for crop production, ultimately contributing to better agricultural decision-making, resource allocation, and food security in India.
+                  The project "Prediction of Agriculture Crop Production in India" aims to leverage data science and machine learning to provide</br> 
+                    accurate predictions for crop production, ultimately contributing to better agricultural decision-making, resource allocation, and food security in India.
                 </p>
                 <p class="university">upSkill Campus</p>
             </div>
@@ -218,7 +219,7 @@
 
        <td> 
            <div class="col">
-            <h2>technologies used</h2>
+            <h3>technologies used</h3>
             <div class="box">
                 <ul>
                   <p>Data Science</p>
