--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <!-- Add any additional metadata or stylesheets here -->
 </head>
     
-<body style="background-color: pink;">
+<body style="background-color: powderblue;">
     <div class="container-fluid">
   <!-- Content here -->
 
@@ -141,12 +141,42 @@
          </table>
     </section> 
     
-  <section id="resume">
+ <!-- <section id="resume">
         <h2>Education</h2>
         <h4>Information Science & Engineering | Visvesvaraya Technological University, Bangalore | Bachelor of Engineering</h4>
         <p>Duration: Nov,2020 – Present</p>
       <a href="https://drive.google.com/file/d/1Ioc8GUdpPRgxcbzoLkKJAwnx_7c0NpdU/view?usp=sharing" target="_blank" class="btn">Download Resume</a>
-    </section>
+    </section>-->
+
+            <section class="resume" id="resume">
+    <h1 class="heading">my <span>resume</span></h1>
+    <div class="col-container">
+      <div class="col">
+        <h2>education</h2>
+        <div class="box">
+          <span><i class="material-icons"> calendar_today </i> Nov 2020 - Present</span>
+          <h3>Bachelor of Engineering(ISE)</h3>
+          <p>
+            Visvesvaraya Technological University , Bangalore, Karnataka
+          </p>
+          <p class="university">VTU, Karnataka</p>
+        </div>
+   <div class="col">
+        <h2>Experience</h2>
+        <div class="box">
+          <span><i class="material-icons"> calendar_today </i> Feb 2024 - Present</span>
+          <h3>Web Developer Course</h3>
+          <p class="university">Sparta Coding Club</p>
+        </div> 
+        </div>
+        <div class="box">
+          <span><i class="material-icons"> calendar_today </i> Feb 2024 - Present</span>
+          <h3>AWS Training</h3>
+          <p class="university">ICT Academy</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
     <section id="certificate">
         <h2>Certifications</h2>
@@ -159,38 +189,38 @@
             <tr>  
                 <th scope="row"></th>
                   <td>
-                     <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" width="200" height="200" /> </a>
+                     <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate1.png" /> </a>
                       <p><imgcaption class="figure-caption">Certifications #1</imgcaption></p>
                    </td> 
                 <td>
-                       <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png" width="200" height="200"/></a>
+                       <a href="https://drive.google.com/file/d/13MvjAfdL6Az9TjexF_PgtwSkSdBGgMKY/view?usp=sharing"> <img src="Images\certificate3.png"/></a>
                          <p><imgcaption class="figure-caption">Certifications #3</imgcaption></p>
                     </td>
                   <td>
-                      <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" width="200" height="200"/></a>
+                      <a href="https://drive.google.com/file/d/1w9iNOtujAa9pZlXSPnV9EbtTl5PIRzT3/view?usp=sharing"> <img src="Images\certificate6.png" /></a>
                        <p><imgcaption class="figure-caption">Certifications #5</imgcaption></p> 
                    </td>
                  <td>
-                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" class="rounded float-left" width="200" height="200"/></a>
+                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate8.png" class="rounded float-left"/></a>
                       <p><imgcaption class="figure-caption-left">Certifications #7</imgcaption></p>
                    </td>
             </tr>
             <tr>
                 <th scope="row"></th>
                  <td>
-                    <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpg" width="200" height="200" /> </a>
+                    <a href="https://drive.google.com/file/d/17jJytb1N2BM9W8ejgxTwqE41iNZjbw-z/view?usp=sharing"> <img src="Images\certificate2.jpg" /> </a>
                      <p><imgcaption class="figure-caption">Certifications #2</imgcaption> </p>
                   </td> 
                  <td>
-                      <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" width="200" height="200"/></a>
+                      <a href="https://drive.google.com/file/d/1wlh1nd-3LH8vmxv7F9Hndt_74bjfX1yn/view?usp=sharing"> <img src="Images\certificate5.png" /></a>
                       <p><imgcaption class="figure-caption">Certifications #4</imgcaption></p>
                     </td>
                     <td>
-                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate7.png" width="200" height="200"/> </a>
+                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate7.png" /> </a>
                       <p><imgcaption class="figure-caption">Certifications #6</imgcaption></p>
                     </td>
                     <td>
-                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" width="200" height="200"/></a>
+                      <a href="https://drive.google.com/file/d/1f4-pAxOSXNx89XIdQAmRh4my1ZzrJhmT/view?usp=sharing"> <img src="Images\certificate4.png" /></a>
                       <p><imgcaption class="figure-caption-left">Certifications #8</imgcaption></p>
                     </td>
             </tr> 
@@ -201,7 +231,6 @@
     <h1 class="heading">my <span>project</span></h1>
     <table>
     <div class="col-container">
-        <th>Project details</th>
         <tr>
        <td>
            <div class="col">
@@ -215,9 +244,6 @@
                 <p class="university">upSkill Campus</p>
             </div>
         </div>
-           </td>
-
-       <td> 
            <div class="col">
             <h3>technologies used</h3>
             <div class="box">
