--- a/index.html
+++ b/index.html
@@ -83,14 +83,27 @@
         <h1 class="heading"><span>Experience</span></h1>
         <table>
             <div class="col-container p-3 mb-2 bg-dark text-white">
+                <ul class="list-inline">
 <!-- Image and text --> 
              <div class="box">
                       <span><i class="material-icons"> calendar_today </i> Feb 2024 - Present</span>
-                      <h3>AWS Training</h3>
-                      <p class="university">ICT Academy</p>
+                 <tr class="list-inline-item">
+               <td> 
+                   <nav class="navbar navbar-light bg-light">
+                      <a class="navbar-brand" href="AWSacademy.instructure.com/courses/74034/modules/items/6644185">
+                        <img src="https://media-exp1.licdn.com/dms/image/C5612AQHIW7BiyXL2qw/article-cover_image-shrink_600_2000/0/1598862726936?e=2147483647&v=beta&t=8Wfch4gjkIgy8qXi7JsOa8BqvyH-GFUq_5sqMAewri0" width="100" height="100" class="d-inline-block align-top" alt="">
+                      </a>
+               </td>
+                 <td> 
+                   <div class="media-body">
+                      <h3 class="mt-0 mb-1">ICT Academy Training</h3>
+                         <p class="university">AWS Academy Cloud Foundations</p>
+                   </div>
+               </td>
+                </nav>
+              </tr>
                     </div>
-                
-             <ul class="list-inline">
+            
                 <div class="box">    
              <tr class="list-inline-item">
                <td> 
