--- a/index.html
+++ b/index.html
@@ -81,6 +81,25 @@
             
     <section class="experience" id="experience">
         <h1 class="heading"><span>Experience</span></h1>
+
+ <div class="col-container">
+      <div class="col">
+        <div class="box">
+          <span><i class="material-icons"> calendar_today </i> Nov 2020 - Present</span>
+          <h3 <a class="navbar-brand" href="AWSacademy.instructure.com/courses/74034/modules/items/6644185">
+                        <img src="https://media-exp1.licdn.com/dms/image/C5612AQHIW7BiyXL2qw/article-cover_image-shrink_600_2000/0/1598862726936?e=2147483647&v=beta&t=8Wfch4gjkIgy8qXi7JsOa8BqvyH-GFUq_5sqMAewri0" width="50" height="50" class="d-inline-block align-top" alt="">
+                      </a>>ICT Academy Training</h3>
+          <p class="university">AWS Academy Cloud Foundations</p>
+        </div>
+       <div class="col">
+        <div class="box">
+          <span><i class="material-icons"> calendar_today </i> Feb 2024 - Present</span>
+          <h3>Web Developer Course</h3>
+          <p class="university">AWS Academy Cloud Foundations</p>
+        </div> 
+        </div>
+      </div>
+        
         <table>
             <div class="col-container p-3 mb-2 bg-dark text-white">
                 <ul class="list-inline">
