--- a/index.html
+++ b/index.html
@@ -82,12 +82,19 @@
     <section class="experience" id="experience">
         <h1 class="heading"><span>Experience</span></h1>
           
-       <div class="col-container">
+       <div class="col-container bg-dark">
       <div class="col">
         <div class="box">
           <span><i class="material-icons"> calendar_today </i> Nov 2020 - Present</span>
           <h3>ICT Academy Training</h3>
           <p class="university">AWS Academy Cloud Foundations</p>
+        </div>
+      </div>
+           <div class="col">
+        <div class="box">
+          <span><i class="material-icons"> calendar_today </i> Aug 2023 - Sep 2023</span>
+          <h3>Artificial Intelligence & Machine Learning Trainee</h3>
+          <p class="university">AiRobosoft products and services</p>
         </div>
       </div>
     </div>
