--- a/index.html
+++ b/index.html
@@ -39,25 +39,18 @@
     </section>
 
  <footer>
-        <section id="contact" bg-colour: bg-dark;>
+        <section id="contact">
             <table>
-                <tr>
-      <th scope="col"></th>
-      <th scope="col"></th>
-    </tr>
         <tbody>
-                <tr>
-                    <th scope="row"></th>
+                <tr bg-colour: bg-dark;>
                     <td>Address: Bangalore, Karnataka</td>
                     <td>Github: <a href="https://github.com/Lalima-tmr">https://github.com/Lalima-tmr</a></td>
                 </tr>
                 <tr>
-                    <th scope="row"></th>
                     <td>phone: <a href="tel:6205733996">6205733996</a></td>
                     <td>E-mail: <a href="mailto:lalimak05@gmail.com?cc=lalimak05@gmail.com&bcc=lalimak05@gmail.com&subject=Mail from our Website&body=Some body text here">lalimak05@gmail.com</a></td>
                 </tr>
                <tr>
-                   <th scope="row"></th>
                    <td>LinkedIn: <a href="https://www.linkedin.com/in/lalima-singh015/">https://www.linkedin.com/in/lalima-singh015/</a></td>
                </tr>
              </tbody>
@@ -68,7 +61,7 @@
     <section class="about" id="about" >
         <div class="box">
             <h1 class="heading">About <span>me</span></h1>
-            <p style="color: rgb(38, 184, 152);">Aspiring Web Developer | Passionate Coder | Fresher </p>
+            <h2 style="color: rgb(38, 184, 152); align-center">Aspiring Web Developer | Passionate Coder | Fresher </h2>
             <p>
                 Hi, my name is Lalima, and I'm studying Information Science and Engineering at Visvesvaraya Technological University. I've completed three internships in Artificial Intelligence, Machine Learning, Data Science, and the Internet of Things, and I'm learning Web Development at SpartaCoding Club.
                 I love working on innovative projects and collaborating with dynamic teams. I believe that hard work and determination can help anyone achieve their goals. 
@@ -79,7 +72,7 @@
         </div>
     </section>
             
-    <section class="experience" id="experience">
+  <!--  <section class="experience" id="experience">
         <h1 class="heading"><span>Experience</span></h1>
           
        <div class="col-container bg-dark">
@@ -155,7 +148,7 @@
             </ul>
             </div>
          </table>
-    </section> 
+    </section> -->
 
     <section class="resume" id="resume">
     <h1 class="heading"><span>Education</span></h1>
